--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,8 @@
 
 - Unit tests
 - Integration tests
-- Helper endpoints (todo/complete)
-- Secure API with Auth0
 - Update models and create DTOs
+- Send other HTTP responses for failure, not found etc...
+- Use Github actions to deploy (CI/CD)
 
 - Create CLI client
